# ensembl-dj-metadata-orm

./: README.md  manage.py  setup.cfg  setup.py
metadata_orm/: apps.py  models.py  router.py
metadata_orm/migrations/: 0001_initial.py
metadata_registry_orm/: asgi.py  settings.py  urls.py  wsgi.py
