[metadata]
name = metadata-orm
version = 0.1
description = Ensembl Metadata - ORM only metadata reusable app
long_description = file: README.md
url = https://www.ensembl.org
author = Marc Chakiachvili
author_email = mchakiachvili@ebi.ac.uk
license = Apache
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: